infra/k8s/delivery-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: teambinarymatter/delivery
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-srv
spec:
  selector:
    app: delivery
  type: ClusterIP
  ports:
    - name: delivery
      protocol: TCP
      port: 5007
      targetPort: 5007
